# UFPI_MobileED

./: CMakeLists.txt  README.md  appitem.c  appitem.h  data_system.c  data_system.h  data_vapps.c  data_vapps.h  data_vrom.c  data_vrom.h  data_vstore.c  data_vstore.h  desktop.c  desktop.h  file_handler.c  file_handler.h  interface.c  interface.h  main.c  vStore.mED
